no overflow-x ? bad idea, revert until I find a proper fix
git-svn-id: https://svn.code.sf.net/p/auber/code/tulip@12540 f5d4c5f9-c943-4916-8a57-bd8605bf961c

--- a/doc/common/_static/customized.css
+++ b/doc/common/_static/customized.css
@@ -17,7 +17,6 @@ body {
   line-height: 1.4em;
   color: black;
   background-color: #ffffff;
-  overflow-x: hidden;
 }
 
 
